building-material's page carousel content update

--- a/building-materials.html
+++ b/building-materials.html
@@ -158,18 +158,25 @@
                 <img src="./assets/images/building-materials/hero-img/building-material-hero-img-2.webp"
                     class="d-block w-100" alt="Hero Image 2">
                 <div class="carousel-caption text-center">
-                    <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
-                        excepturi commodi? Rem accusantium vero quo deleniti? Harum quos beatae ut.</p>
+                    <h1>Strengthen Your Projects with Premium Quality Cement</h1>
+                    <p class="text-center">
+                        At Bhagirath Industry, we provide top-grade cement designed for durability and reliability.
+                        Whether for residential, commercial, or infrastructure projects, our cement ensures solid
+                        foundations and long-lasting structures, making your building projects safer and more efficient.
+                    </p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
                 <img src="./assets/images/building-materials/hero-img/building-material-hero-img-3.webp"
                     class="d-block w-100" alt="Hero Image 3">
                 <div class="carousel-caption text-center">
-                    <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
-                        excepturi commodi? Rem accusantium vero quo deleniti? Harum quos beatae ut.</p>
+                    <h1>Reinforce Your Structures with Premium Steel</h1>
+                    <p class="text-center">
+                        Ensure the integrity and stability of your constructions with our superior steel and
+                        reinforcement materials. Engineered for strength and resilience, Bhagirath Industry’s steel
+                        products offer long-lasting performance for any construction, from commercial complexes to
+                        residential buildings.
+                    </p>
                 </div>
             </div>
             <!-- <div class="carousel-item carousel-item-custom-height">
@@ -200,10 +207,10 @@
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
             <p class="text-center regular-font">
-                Discover top-quality polymers at Bhagirath Industry. As leading suppliers, we provide a wide range of
-                innovative polymer solutions. Our commitment to excellence ensures industries receive premium-grade
-                materials, promoting efficiency and sustainability. Partner with us for all your polymer needs, driving
-                progress through advanced chemical solutions.
+                At Bhagirath Industry, we provide high-quality building materials designed to meet the needs of
+                construction professionals. From durable cement to reliable aggregates, our products ensure strong,
+                long-lasting structures. Trust us for materials that enhance your projects' efficiency, quality, and
+                sustainability.
             </p>
         </div>
         <div class="row">
