minerals-and-ores page carousel content update

--- a/minerals-and-ores.html
+++ b/minerals-and-ores.html
@@ -158,18 +158,24 @@
                 <img src="./assets/images/minerals-and-ores/hero-img/minerals-and-ores-hero-img-2.webp"
                     class="d-block w-100" alt="Hero Image 2">
                 <div class="carousel-caption text-center">
-                    <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
-                        excepturi commodi? Rem accusantium vero quo deleniti? Harum quos beatae ut.</p>
+                    <h1>High-Quality Ores for Diverse Industries</h1>
+                    <p class="text-center">
+                        Our ores are extracted and refined with precision, providing the foundational materials needed
+                        for a wide array of industries. Bhagirath Industry ensures that you receive the best ore
+                        products to power your operations, from mining to metallurgy and beyond.
+                    </p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
                 <img src="./assets/images/minerals-and-ores/hero-img/minerals-and-ores-hero-img-3.webp"
                     class="d-block w-100" alt="Hero Image 3">
                 <div class="carousel-caption text-center">
-                    <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
-                        excepturi commodi? Rem accusantium vero quo deleniti? Harum quos beatae ut.</p>
+                    <h1>Sustainable and Responsible Sourcing for a Better Tomorrow.</h1>
+                    <p class="text-center">
+                        We are committed to sustainable sourcing practices that protect the environment and support
+                        responsible mining. Bhagirath Industry works with trusted partners to ensure that our minerals
+                        and ores meet the highest ethical and ecological standards, paving the way for a greener future.
+                    </p>
                 </div>
             </div>
             <!-- <div class="carousel-item carousel-item-custom-height">
@@ -199,11 +205,11 @@
     <div class="container pt-4">
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
-            <p class="text-center regular-font">Welcome to Bhagirath Industries' Minerals & Ores selection. We are the
-                driving force
-                behind global trade, connecting nations and industries. With products including Ferro Chrome, Iron Ore,
-                Coal, Chrome Concentrate, Bauxite, Calamine, Manganese, and Lithium, we're your reliable source for raw
-                materials. Trust us to open doors to a world of trade opportunities.
+            <p class="text-center regular-font">
+                Bhagirath Industry offers a wide selection of high-quality minerals and ores, sourced to meet the
+                diverse needs of various industries. Our products are meticulously selected for their purity and
+                performance, ensuring optimal results in manufacturing, construction, and other applications. Partner
+                with us for reliable and sustainable mineral solutions that support your business growth.
             </p>
         </div>
         <div class="row">
