--- a/biofuels.html
+++ b/biofuels.html
@@ -159,20 +159,28 @@
                 <img src="./assets/images/biofuels/hero-img/biofuels-hero-img-2.webp" class="d-block w-100"
                     alt="Hero Image 2">
                 <div class="carousel-caption text-center">
-                    <h1>Lorem ipsum dolor sit amet consectetur. </h1>
-                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
-                        excepturi commodi? Rem accusantium vero quo deleniti? Harum quos beatae ut.</p>
+                    <h1>Harness the Power of Sustainable Biofuels</h1>
+                    <p class="text-center">
+                        At Bhagirath Industry, we are committed to providing eco-friendly biofuel solutions that help
+                        reduce carbon footprints while meeting your energy needs. Our advanced biofuels offer a
+                        sustainable alternative to traditional fuels, supporting greener energy practices for a cleaner
+                        future.
+                    </p>
                 </div>
             </div>
-            <!-- <div class="carousel-item carousel-item-custom-height">
-        <img src="assets/images/petroleum-oil-page/hero-img/Rectangle 77.webp" class="d-block w-100" alt="...">
-        <div class="carousel-caption text-center">
-          <h1>PETROLEUM AND BIO FUEL</h1>
-          <p class="text-center">Are you looking for top-quality agriculture commodities and food products? Look no
-            further! We ship our
-            products all over the world, and our quality meets all the necessary requirements.</p>
-        </div>
-      </div> -->
+            <div class="carousel-item carousel-item-custom-height">
+                <img src="./assets/images/biofuels/hero-img/biofuels-hero-img-3.webp" class="d-block w-100"
+                    alt="Hero Image 3">
+                <div class="carousel-caption text-center">
+                    <h1>Fueling a Greener Tomorrow with Renewable Biofuels</h1>
+                    <p class="text-center">
+                        Our biofuels are derived from renewable resources, ensuring a sustainable and efficient energy
+                        solution for industries and communities alike. With a focus on innovation and environmental
+                        responsibility, Bhagirath Industry is leading the charge toward a future powered by clean,
+                        renewable energy.
+                    </p>
+                </div>
+            </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
             data-bs-slide="prev">
@@ -192,10 +200,13 @@
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
             <p class="text-center regular-font">
-                Discover the future of sustainable energy at Bhagirath Industries with our Biofuel offering. We proudly
-                present a comprehensive range of environmentally-conscious biofuel options, including Bio Diesel,
-                Ethanol, Bio LNG, Fatty Acids & Sterne, and Palm Oil & Used Cooking Oil. These alternatives not only
-                reduce carbon emissions but also contribute to a greener planet.
+                At Bhagirath Industry, we are committed to promoting sustainable energy solutions through our
+                high-quality biofuels. Our biofuel products are made from renewable sources, offering an eco-friendly
+                alternative to traditional fossil fuels. Designed to reduce carbon emissions and improve energy
+                efficiency, our biofuels are perfect for industries looking to embrace cleaner, greener energy. Whether
+                you're in transportation, power generation, or manufacturing, our biofuels help reduce environmental
+                impact while providing a reliable and cost-effective energy source. Partner with Bhagirath Industry and
+                take a step toward a more sustainable future with our advanced biofuel solutions.
             </p>
         </div>
         <div class="row">
