cattlefeed-and-fertilizers page carousel content update

--- a/cattlefeed-and-fertilizers.html
+++ b/cattlefeed-and-fertilizers.html
@@ -159,18 +159,26 @@
                 <img src="./assets/images/cattlefeed-and-fertilizers/hero-img/cattlefeed-and-fertilizers-hero-img-2.webp"
                     class="d-block w-100" alt="Hero Image 2">
                 <div class="carousel-caption text-center">
-                    <h1>Lorem ipsum dolor sit amet consectetur. </h1>
-                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
-                        excepturi commodi? Rem accusantium vero quo deleniti? Harum quos beatae ut.</p>
+                    <h1>Boost Crop Yields with Our Superior Fertilizers</h1>
+                    <p class="text-center">
+                        Our fertilizers are specially developed to improve soil health and increase crop yields. With
+                        advanced formulations and sustainable practices, Bhagirath Industry delivers fertilizers that
+                        help you grow healthier, more robust crops, contributing to both quality and quantity in your
+                        agricultural production.
+                    </p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
                 <img src="./assets/images/cattlefeed-and-fertilizers/hero-img/cattlefeed-and-fertilizers-hero-img-3.webp"
                     class="d-block w-100" alt="Hero Image 2">
                 <div class="carousel-caption text-center">
-                    <h1>Lorem ipsum dolor sit amet consectetur. </h1>
-                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
-                        excepturi commodi? Rem accusantium vero quo deleniti? Harum quos beatae ut.</p>
+                    <h1>Empowering Agriculture with Tailored Solutions</h1>
+                    <p class="text-center">
+                        Whether you’re enhancing livestock nutrition with premium cattlefeed or optimizing crop growth
+                        with effective fertilizers, Bhagirath Industry provides comprehensive solutions to meet the
+                        unique needs of your agricultural business. Partner with us for quality products that drive
+                        success and sustainability in every harvest.
+                    </p>
                 </div>
             </div>
             <!-- <div class="carousel-item carousel-item-custom-height">
@@ -200,10 +208,10 @@
     <div class="container pt-4">
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
-            <p class="text-center regular-font">At Bhagirath Industries, we are committed to delivering top-quality
-                cattle feed and
-                fertiliser products that empower agriculture and enhance livestock management. Our extensive portfolio
-                ensures that you have access to a wide range of options to meet your agricultural and livestock needs.
+            <p class="text-center regular-font">
+                At Bhagirath Industry, we are committed to delivering top-quality cattle feed and fertiliser products
+                that empower agriculture and enhance livestock management. Our extensive portfolio ensures that you have
+                access to a wide range of options to meet your agricultural and livestock needs.
             </p>
         </div>
         <div class="row">
