petroleum-and-oil-products page carousel content update

--- a/petroleum-and-oil-products.html
+++ b/petroleum-and-oil-products.html
@@ -137,7 +137,8 @@
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
     <div class="carousel-inner">
       <div class="carousel-item carousel-item-custom-height active">
-        <img src="assets/images/petroleum-oil-page/hero-img/Rectangle 29 (6).webp" class="d-block w-100" alt="...">
+        <img src="assets/images/petroleum-oil-page/hero-img/petroleum-oil-page-hero-img-1.webp" class="d-block w-100"
+          alt="...">
         <div class="carousel-caption text-center">
           <h1>Reliable Petroleum & Oil Products for Your Industry</h1>
           <p class="text-center">
@@ -149,21 +150,27 @@
         </div>
       </div>
       <div class="carousel-item carousel-item-custom-height">
-        <img src="assets/images/product-page/hero-img/Rectangle 30 (1).webp" class="d-block w-100" alt="...">
+        <img src="assets/images/petroleum-oil-page/hero-img/petroleum-oil-page-hero-img-2.webp" class="d-block w-100"
+          alt="...">
         <div class="carousel-caption text-center">
-          <h1>COMMODITIES AND FOOD PRODUCTS</h1>
-          <p class="text-center">When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
-            worldwide, and you
-            can trust that the quality is always up to standard.</p>
+          <h1>Uncompromising Quality, Trusted by Industries Worldwide</h1>
+          <p class="text-center">
+            Bhagirath Industry's petroleum and oil products undergo rigorous testing to ensure the highest standards of
+            quality. Whether you're in manufacturing, transportation, or energy, our products are trusted by industries
+            worldwide for their consistency, reliability, and superior performance.
+          </p>
         </div>
       </div>
       <div class="carousel-item carousel-item-custom-height">
-        <img src="assets/images/petroleum-oil-page/hero-img/Rectangle 77.webp" class="d-block w-100" alt="...">
+        <img src="assets/images/petroleum-oil-page/hero-img/petroleum-oil-page-hero-img-3.webp" class="d-block w-100"
+          alt="...">
         <div class="carousel-caption text-center">
-          <h1>PETROLEUM AND BIO FUEL</h1>
-          <p class="text-center">Are you looking for top-quality agriculture commodities and food products? Look no
-            further! We ship our
-            products all over the world, and our quality meets all the necessary requirements.</p>
+          <h1>Sustainability Meets Performance in Every Drop</h1>
+          <p class="text-center">
+            Our petroleum and oil products are engineered with both performance and sustainability in mind. With a focus
+            on reducing environmental impact and improving operational efficiency, Bhagirath Industry is committed to
+            delivering energy solutions that meet the demands of a modern, eco-conscious world.
+          </p>
         </div>
       </div>
     </div>
@@ -182,11 +189,11 @@
   <div class="container pt-4">
     <div class="product-top-content text-center pb-3">
       <h2>PRODUCTS WE SERVE</h2>
-      <p class="text-center regular-font">At Bhagirath Industries, we take immense pride in our expertise in the
-        sourcing, supply,
-        and quality assurance of petroleum and fuel related products. With a strong commitment to excellence and
-        reliability, we have become a trusted partner for businesses across the globe seeking to meet their energy
-        needs and fuel the engines of industry and transportation.
+      <p class="text-center regular-font">
+        At Bhagirath Industry, we take immense pride in our expertise in the sourcing, supply, and quality assurance of
+        petroleum and fuel related products. With a strong commitment to excellence and reliability, we have become a
+        trusted partner for businesses across the globe seeking to meet their energy needs and fuel the engines of
+        industry and transportation.
       </p>
     </div>
     <div class="row">
