--- a/edible-and-non-edible-oils.html
+++ b/edible-and-non-edible-oils.html
@@ -155,18 +155,24 @@
         <img src="assets/images/edible-oil-page/hero-section-img/edible-oil-hero-img-2.webp" class="d-block w-100"
           alt="...">
         <div class="carousel-caption text-center">
-          <h1>COMMODITIES AND FOOD PRODUCTS</h1>
-          <p>When it comes to petroleum and biofuel, we've got you covered. Our products are shipped worldwide, and you
-            can trust that the quality is always up to standard.</p>
+          <h1>Pure and Quality Edible Oils for Every Kitchen</h1>
+          <p>
+            Bhagirath Industry brings you a range of premium edible oils crafted for taste, health, and purity. From
+            sunflower to mustard and more, our oils are refined to retain the natural nutrients that make every meal
+            delicious and nourishing. Trust Bhagirath for quality you can taste.
+          </p>
         </div>
       </div>
       <div class="carousel-item carousel-item-custom-height">
         <img src="assets/images/edible-oil-page/hero-section-img/edible-oil-hero-img-3.webp" class="d-block w-100"
           alt="...">
         <div class="carousel-caption text-center">
-          <h1>PETROLEUM AND BIO FUEL</h1>
-          <p>Are you looking for top-quality agriculture commodities and food products? Look no further! We ship our
-            products all over the world, and our quality meets all the necessary requirements.</p>
+          <h1>High-Performance Non-Edible Oils for Industrial Needs</h1>
+          <p>
+            Our non-edible oils are formulated to meet the highest standards of performance for industrial applications.
+            From lubricants to biofuels, Bhagirath Industry’s non-edible oils are crafted to deliver reliability and
+            efficiency in various sectors. Depend on us for robust, high-quality solutions.
+          </p>
         </div>
       </div>
     </div>
@@ -185,12 +191,11 @@
   <div class="container pt-4">
     <div class="product-top-content text-center pb-3">
       <h2>PRODUCTS WE SERVE</h2>
-      <p class="text-center regular-font">At Bhagirath Industries, we take pride in serving a diverse range of essential
-        raw materials to
-        meet your
-        global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal and pulses,
-        our offerings are designed to fuel industries worldwide. Additionally, we excel in providing high-quality
-        yellow maize for various applications, ensuring a reliable supply chain for your raw material requirements.
+      <p class="text-center regular-font">
+        At Bhagirath Industry, we take pride in serving a diverse range of essential raw materials to meet your global
+        business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal and pulses, our
+        offerings are designed to fuel industries worldwide. Additionally, we excel in providing high-quality yellow
+        maize for various applications, ensuring a reliable supply chain for your raw material requirements.
       </p>
     </div>
     <div class="row">
