agro-commodities page carousel content update

--- a/agro-commodities.html
+++ b/agro-commodities.html
@@ -152,20 +152,26 @@
                 <img src="./assets/images/agro-commodities/hero-img/agro-commodities-hero-img-2.webp"
                     class="d-block w-100" alt="Hero Image 2">
                 <div class="carousel-caption text-center">
-                    <h1>Lorem ipsum dolor sit amet consectetur. </h1>
-                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
-                        excepturi commodi? Rem accusantium vero quo deleniti? Harum quos beatae ut.</p>
+                    <h1>Efficient Sourcing and Distribution of Agro Commodities</h1>
+                    <p class="text-center">
+                        We bridge the gap between farmers and markets, ensuring timely and efficient delivery of agro
+                        commodities. With a robust supply chain and quality control at every step, Bhagirath Industry
+                        helps you stay ahead in a competitive marketplace.
+                    </p>
                 </div>
             </div>
-            <!-- <div class="carousel-item carousel-item-custom-height">
-        <img src="assets/images/petroleum-oil-page/hero-img/Rectangle 77.webp" class="d-block w-100" alt="...">
-        <div class="carousel-caption text-center">
-          <h1>PETROLEUM AND BIO FUEL</h1>
-          <p class="text-center">Are you looking for top-quality agriculture commodities and food products? Look no
-            further! We ship our
-            products all over the world, and our quality meets all the necessary requirements.</p>
-        </div>
-      </div> -->
+            <div class="carousel-item carousel-item-custom-height">
+                <img src="assets/images/petroleum-oil-page/hero-img/petroleum-oil-page-hero-img-3.webp"
+                    class="d-block w-100" alt="...">
+                <div class="carousel-caption text-center">
+                    <h1>Empowering Growth in Agriculture with Trusted Partnerships</h1>
+                    <p class="text-center">
+                        We believe in empowering farmers and markets alike. By partnering with Bhagirath Industry, you
+                        gain access to responsibly sourced agro commodities that support sustainable farming and
+                        contribute to the global food supply chain. Join us in fostering agricultural growth.
+                    </p>
+                </div>
+            </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
             data-bs-slide="prev">
@@ -184,11 +190,10 @@
     <div class="container pt-4">
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
-            <p class="text-center regular-font">At Bhagirath Industries, we take pride in serving a diverse range of
-                essential raw
-                materials to meet
-                your global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal
-                and pulses, our offerings are designed to fuel industries worldwide. Additionally, we excel in providing
+            <p class="text-center regular-font">
+                At Bhagirath Industry, we take pride in serving a diverse range of essential raw materials to meet your
+                global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal and
+                pulses, our offerings are designed to fuel industries worldwide. Additionally, we excel in providing
                 high-quality yellow maize for various applications, ensuring a reliable supply chain for your raw
                 material requirements.
             </p>
