--- a/contact-us.html
+++ b/contact-us.html
@@ -148,17 +148,24 @@
       <div class="carousel-item carousel-item-custom-height">
         <img src="assets/images/contact-us-img/hero-section/contact-us-hero-img-2.webp" class="d-block w-100" alt="...">
         <div class="carousel-caption text-center">
-          <h1>COMMODITIES AND FOOD PRODUCTS</h1>
-          <p>When it comes to petroleum and biofuel, we've got you covered. Our products are shipped worldwide, and you
-            can trust that the quality is always up to standard.</p>
+          <h1>Need Assistance? We’re Here for You</h1>
+          <p>
+            At Bhagirath Industry, we are dedicated to innovation, quality, and sustainability across agriculture,
+            transportation, chemicals, and energy. With a commitment to providing high-performance products and tailored
+            solutions, we empower industries to grow responsibly and meet the challenges of tomorrow. Guided by our
+            values of integrity and excellence, we strive to make a positive impact for our clients, communities, and
+            the environment. Discover more about our journey, our mission, and our vision for a sustainable future.
+          </p>
         </div>
       </div>
       <div class="carousel-item carousel-item-custom-height">
         <img src="assets/images/contact-us-img/hero-section/contact-us-hero-img-3.webp" class="d-block w-100" alt="...">
         <div class="carousel-caption text-center">
-          <h1>PETROLEUM AND BIO FUEL</h1>
-          <p>Are you looking for top-quality agriculture commodities and food products? Look no further! We ship our
-            products all over the world, and our quality meets all the necessary requirements.</p>
+          <h1>Partner with Bhagirath Industry for a Brighter Future</h1>
+          <p>
+            Looking to collaborate or explore new opportunities in agriculture, transportation, or other industries?
+            Connect with our business development team to discuss how we can work together to achieve impactful results.
+          </p>
         </div>
       </div>
     </div>
@@ -177,7 +184,7 @@
   <section>
     <div class="container iframe">
       <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3691.363513786674!2d114.17333367434479!3d22.302087842832474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x340400eed203ffff%3A0x20faea0efb0f5885!2zViZHIEJ1c2luZXNzIENlbnRyZSDlgYnlgKvllYbli5nkuK3lv4M!5e0!3m2!1sen!2sin!4v1720420013462!5m2!1sen!2sin"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.135729777269!2d72.75709027471753!3d21.146996083708085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04d80f5d96493%3A0x5f79790a213bd724!2sLuxuria%20Business%20Hub!5e0!3m2!1sen!2sin!4v1731479505390!5m2!1sen!2sin"
         width="100%" height="385" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
@@ -204,12 +211,12 @@
             Udhana Magdalla Road, Surat - Dumas Road,
             Surat Gujarat - 395007 INDIA</p>
         </div>
-        <div class="col-md-4 col-sm-6 col-xs-12 contact-us-box">
+        <!-- <div class="col-md-4 col-sm-6 col-xs-12 contact-us-box">
           <img src="assets/images/contact-us-img/icon/Vector (1) (1).webp" alt="phone" class="pb-3">
           <p class="text-center regular-font">Phone Number</p>
           <p class="text-center regular-font">Tel - 85239195807</p>
           <p class="text-center regular-font">Fax - 85239195837</p>
-        </div>
+        </div> -->
         <div class="col-md-4 col-sm-6 col-xs-12 contact-us-box">
           <img src="assets/images/contact-us-img/icon/Group 107.webp" alt="mail " class="pb-3">
           <p class="text-center regular-font">Email</p>
