--- a/our-services.html
+++ b/our-services.html
@@ -151,22 +151,26 @@
         <img src="assets/images/our-services-icon-img/hero-services-section-img/Rectangle 52.webp" class="d-block w-100"
           alt="...">
         <div class="carousel-caption text-center">
-          <h1>COMMODITIES AND FOOD PRODUCTS</h1>
-          <p class="text-center">When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
-            worldwide, and you
-            can trust that the quality is always up to standard.</p>
+          <h1>Streamlining Transportation for Efficiency & Reliability</h1>
+          <p class="text-center">
+            Optimize your logistics and ensure timely deliveries with Bhagirath Industry’s custom transportation
+            solutions. Our services include route optimization, fleet management, and real-time tracking, empowering you
+            to meet customer demands with confidence and efficiency.
+          </p>
         </div>
       </div>
-      <!-- <div class="carousel-item carousel-item-custom-height">
+      <div class="carousel-item carousel-item-custom-height">
         <img src="assets/images/our-services-icon-img/hero-services-section-img/Rectangle 53.webp" class="d-block w-100"
           alt="...">
         <div class="carousel-caption text-center">
-          <h1>PETROLEUM AND BIO FUEL</h1>
-          <p class="text-center">Are you looking for top-quality agriculture commodities and food products? Look no
-            further! We ship our
-            products all over the world, and our quality meets all the necessary requirements.</p>
+          <h1>Integrated Agri-Transport Solutions</h1>
+          <p class="text-center">
+            Combine the power of agriculture and transportation with Bhagirath Industry’s integrated solutions. Our
+            end-to-end services cover the entire journey—from farm to market—delivering your agricultural products
+            safely and efficiently while reducing time and costs at every step.
+          </p>
         </div>
-      </div> -->
+      </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
