career page carousel content and job opening content changed

--- a/career.html
+++ b/career.html
@@ -133,6 +133,7 @@
 
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
     <div class="carousel-inner">
+
       <div class="carousel-item carousel-item-custom-height active">
         <img src="assets/images/career page/hero-section-img/career-hero-img-1.webp" class="d-block w-100" alt="...">
         <div class="carousel-caption text-center">
@@ -144,14 +145,31 @@
           </p>
         </div>
       </div>
+
       <div class="carousel-item carousel-item-custom-height">
         <img src="assets/images/career page/hero-section-img/career-hero-img-2.webp" class="d-block w-100" alt="...">
         <div class="carousel-caption text-center">
-          <h1>COMMODITIES AND FOOD PRODUCTS</h1>
-          <p>When it comes to petroleum and biofuel, we've got you covered. Our products are shipped worldwide, and
-            you can trust that the quality is always up to standard.</p>
+          <h1>Grow Your Career with Supportive Mentorship</h1>
+          <p>
+            We’re committed to your professional development. Bhagirath Industry provides continuous learning,
+            mentorship, and a collaborative environment that helps you reach your full potential. Shape your future with
+            us in an inclusive and supportive workplace.
+          </p>
         </div>
       </div>
+
+      <div class="carousel-item carousel-item-custom-height">
+        <img src="assets/images/career page/hero-section-img/career-hero-img-3.webp" class="d-block w-100" alt="...">
+        <div class="carousel-caption text-center">
+          <h1>Be Part of a Sustainable Future</h1>
+          <p>
+            At Bhagirath Industry, we’re dedicated to building solutions for a sustainable tomorrow. Join our team to
+            contribute to projects that advance sustainable practices in agriculture and transportation, making a
+            positive impact on communities and the environment.
+          </p>
+        </div>
+      </div>
+
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -207,15 +225,20 @@
 
   <section class="job-openings px-2 pb-5">
     <h2 class="text-center">Job Openings</h2>
-    <p class="text-center regular-font">
+    <!-- <p class="text-center regular-font">
       We're on the lookout for talented individuals to join our team! If you're passionate about innovation, growth, and
       making a meaningful impact, we want to hear from you. Explore our current job openings and find your next career
       opportunity.
-    </p>
+    </p> -->
     <div class="container pt-4">
       <div class="row">
+
+        <!-- No Jobs Available Code Start -->
+        <img src="/assets/images/career page/utils/career-page-no-jobs.webp" alt="No job available">
+        <!-- No Jobs Available Code End -->
+
         <!-- <div class="col-md-4 mb-4 job-card"> -->
-        <div class="col-md-4 mb-4 job-card regular-font" data-title="Back-end Developer" data-location="Bhopal"
+        <!-- <div class="col-md-4 mb-4 job-card regular-font" data-title="Back-end Developer" data-location="Bhopal"
           data-category="Developer">
           <div class="card-career border-secondary">
             <div class="card-header bg-transparent border-success">Telecommunications</div>
@@ -233,7 +256,7 @@
               <span class="read-more-btn" onclick="toggleContent('content-hidden-1')">Read more</span>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- <div class="col-md-4 mb-4 job-card"> -->
         <!-- <div class="col-md-4 mb-4 job-card regular-font" data-title="Front-end Developer" data-location="Noida"
           data-category="Developer">
