about page's carousel content changed and Corporate Organogram section hide or removed

--- a/about.html
+++ b/about.html
@@ -221,20 +221,27 @@
                 <img src="assets/images/about-page/hero-section-img/about-hero-img-2.webp" class="d-block w-100"
                     alt="...">
                 <div class="carousel-caption text-center">
-                    <h1>VAST SUPPLY CHAIN</h1>
-                    <p>Our dedicated team is adept at navigating the complexities of the supply chain. From procurement
-                        to delivery, we optimise every step, guaranteeing efficiency and timely delivery. Our meticulous
-                        approach ensures that our clients receive products of the highest standards.</p>
+                    <h1>Empowering Factories, Empowering Workers: Bhagirath Industry</h1>
+                    <p>
+                        At Bhagirath Industry, we believe in building a sustainable future by enhancing factory
+                        efficiency and worker safety. Our advanced solutions are crafted to streamline operations,
+                        improve productivity, and ensure a safe, supportive environment for every team member. Join us
+                        in shaping an industry where both innovation and people thrive together.
+                    </p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
                 <img src="assets/images/about-page/hero-section-img/about-hero-img-3.webp" class="d-block w-100"
                     alt="...">
                 <div class="carousel-caption text-center">
-                    <h1>QUALITY ASSURANCE</h1>
-                    <p>Quality is paramount. We implement stringent quality control measures throughout the supply chain
-                        to uphold the integrity of the products we trade. Our commitment to excellence is reflected in
-                        the satisfaction of our clients who trust us for superior commodities and raw food supplies.</p>
+                    <h1>Driving Growth in Agriculture & Transportation with Smart Solutions</h1>
+                    <p>
+                        Bhagirath Industry is dedicated to transforming agriculture and transportation through
+                        innovative, tailored solutions. From enhancing crop management to streamlining logistics, our
+                        technology empowers your business to operate more efficiently and sustainably. Partner with us
+                        to fuel progress, increase productivity, and meet the evolving demands of modern agriculture and
+                        transportation.
+                    </p>
                 </div>
             </div>
         </div>
@@ -366,7 +373,7 @@
                     <div class="col-md-9 p-4">
                         <h2 class="text-center text-md-start">Our Values</h2>
                         <p class="text-justify regular-font">
-                            "At the heart of Bhagirath Technologies lies a set of core values that guide every aspect of
+                            At the heart of Bhagirath Technologies lies a set of core values that guide every aspect of
                             our work. These values are the foundation of our culture, the blueprint for our
                             relationships, and the driving force behind our commitment to excellence. Integrity is the
                             cornerstone of our business. We believe in honest communication, transparent practices, and
@@ -571,7 +578,7 @@
 
     <!-- CORPORATE ORGANOGRAM -->
 
-    <section class="corporate-organogram py-5">
+    <!-- <section class="corporate-organogram py-5">
         <div class="container text-light py-5">
             <h2>Corporate Organogram</h2>
             <p class="heavy-font regular-font">
@@ -592,7 +599,7 @@
                 </button>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- OUR TEAM -->
 
