home page carousel content changed

--- a/index.html
+++ b/index.html
@@ -149,11 +149,12 @@
                 <img src="assets/images/home-page-images/home-hero-section-img/home-hero-img-2.webp"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption text-center">
-                    <h1>COMMODITIES AND FOOD PRODUCTS</h1>
+                    <h1>Transform Your Logistics with Smart, Scalable Solutions</h1>
                     <p class="text-center">
-                        Are you looking for top-quality agriculture commodities and food products?
-                        Look no further! We ship our products all over the world, and our quality meets all the
-                        necessary requirements.
+                        Streamline operations, reduce costs, and enhance efficiency with our custom logistics software
+                        solutions. From real-time tracking to predictive analytics, we empower your logistics business
+                        with cutting-edge tools tailored to meet your unique needs. Optimize your supply chain and stay
+                        ahead of the competition with technology built for today’s fast-paced logistics landscape.
                     </p>
                 </div>
             </div>
@@ -162,10 +163,12 @@
                 <img src="assets/images/home-page-images/home-hero-section-img/home-hero-img-3.webp"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption text-center">
-                    <h1>PETROLEUM AND BIO FUEL</h1>
+                    <h1>Fueling Innovation in Petroleum & Oil Management</h1>
                     <p class="text-center">
-                        When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
-                        worldwide, and you can trust that the quality is always up to standards.
+                        Optimize every aspect of your petroleum and oil operations with our custom software solutions.
+                        From inventory tracking to compliance management, we deliver tools designed to enhance
+                        efficiency, ensure safety, and maximize profitability. Drive your business forward with
+                        technology that meets the demands of today’s energy landscape.
                     </p>
                 </div>
             </div>
@@ -304,19 +307,19 @@
             <div class="slider-wrapper">
 
                 <ul class="image-list">
-                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider-img-2.webp"
+                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider-img-1.webp"
                         alt="img-1" />
-                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider-img-3.webp"
-                        alt="img-2" />
-                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider-img-4.webp"
-                        alt="img-3" />
                     <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider-img-2.webp"
-                        alt="img-4" />
+                        alt="img-2" />
                     <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider-img-3.webp"
-                        alt="img-5" />
+                        alt="img-3" />
                     <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider-img-4.webp"
+                        alt="img-4" />
+                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider-img-1.webp"
+                        alt="img-5" />
+                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider-img-2.webp"
                         alt="img-6" />
-                </ul>
+                </ul> 
             </div>
             <div class="slider-scrollbar">
                 <div class="scrollbar-track">
