bottom part of navbar updated

--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
         <div class="new-navbar-bottom">
             <div class="new-navbar-contact">
                 <i class="bi bi-globe pe-1"></i>
-                <span>info@bhagirathindustries.com | +91 0987654321 / +91 0987654321</span>
+                <span>info@bhagirathindustries.com</span>
             </div>
             <div class="new-navbar-social-icons pe-lg-3">
                 <a href="#" class="our-team-icon"><i class="bi bi-google"></i></a>
