Get in Touch's contact info changed

--- a/chemicals.html
+++ b/chemicals.html
@@ -309,9 +309,14 @@
                 <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
                     <h3>Get in Touch</h3>
                     <div class="frame39-icon pt-3">
-                        <img src="assets/images/footer-section/Vector (10).png" alt=""> +852 39195807 <br>
+                        <!-- <img src="assets/images/footer-section/Vector (10).png" alt=""> +852 39195807 <br>
                         <br>
-                        <img src="assets/images/footer-section/Vector (11).png" alt=""> +852 39195837
+                        <img src="assets/images/footer-section/Vector (11).png" alt=""> +852 39195837 -->
+
+                        <!-- New Code Added for Get in Touch By Abhishek START -->
+                        <i class="bi bi-globe pe-1"></i>
+                        <span>info@bhagirathindustries.com</span>
+                        <!-- New Code Added for Get in Touch By Abhishek END -->
                     </div>
                     <div class="footer-icon-container">
                         <a class="social-icon" href="https://www.facebook.com/" target="_blank"
