--- a/contact-us.html
+++ b/contact-us.html
@@ -378,27 +378,6 @@
       document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE, and Opera
     };
 
-    // CONTACT FORM SCRIPT
-
-    let formContactUs = document.getElementById("contactForm");
-    formContactUs.addEventListener('submit', (e) => {
-      e.preventDefault();
-      document.querySelector("#submitButtonContactUs").value = "Submitting...";
-      document.querySelector("#submitButtonContactUs").disabled = true;
-      let data = new FormData(formContactUs);
-      // data.append('formType', 'Contact Us'); // Add formType to identify the form
-      fetch('https://script.google.com/macros/s/AKfycbxxNdVWEo2QVaAymGzN6RuIio7HEOOqaa7BKBd5Q4pwi49YAPKZpaC4na0d-wZoNqSK/exec', {
-        method: "POST",
-        body: data,
-      })
-        .then(res => res.text())
-        .then(data => {
-          document.querySelector("#submitButtonContactUs").value = "Your form has been submitted";
-          // document.querySelector("#submitButtonContactUs").disabled = true;
-          // document.querySelector(".form-check-input").disabled = true;
-        })
-    })
-
     // THIS IS THE SCRIPT THAT MAKES THE NAVBAR VANISH WHEN SCROLLING DOWN ON SMALL SCREENS
 
     document.addEventListener('DOMContentLoaded', function () {
@@ -470,6 +449,10 @@
     });
 
   </script>
+
+  <!-- Contact Us Form Script Start -->
+  <script src="assets/scripts/contactus-page.js"></script>
+  <!-- Contact Us Form Script End -->
 
 </body>
 
